--- a/EazyHomeAccount/Views/Home/Index.cshtml
+++ b/EazyHomeAccount/Views/Home/Index.cshtml
@@ -3,14 +3,15 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Eazy Home Account</h1>
+    <p class="lead">Record your daily transations to view and controll your spended. Summarize your INCOME and EXPEND.</p>
+    <p class="lead"></p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Try for Free. &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Features</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
@@ -19,13 +20,20 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Why Eazy</h2>
+        <p>
+            NuGet is a free Visual Studio extension that makes it easy to add,
+            remove, and update libraries and tools in Visual Studio projects.
+        </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Who We Are?</h2>
+        <p>
+            We are family who working on software development over 10 years such as Embeded, ERP, Soltion and so on.
+            And we want to improve our skill on web development. So we looking around our home to make things better.
+            <em><br />Who we are?</em>
+        </p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Check it out!>> &raquo;</a></p>
     </div>
 </div>
