--- a/EazyHomeAccount/Views/Shared/_Layout.cshtml
+++ b/EazyHomeAccount/Views/Shared/_Layout.cshtml
@@ -10,7 +10,11 @@
 <body>
     @*====== Nevigation bar ======*@
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+
+        <div class="container" style="left:200px">
+            <div style="float:left; padding:5px 8px 3px 3px">
+                <img src="~/Images/logoBlue-circle.PNG" height="40" />
+            </div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
