--- a/EazyHomeAccount/Views/Home/About.cshtml
+++ b/EazyHomeAccount/Views/Home/About.cshtml
@@ -5,6 +5,6 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
-<img src="~/App_Data/Images/logo 240x90.jpg" alt="jcmLogo"  />
+<img src="~/Images/sarawoot.PNG" />
 
 
