--- a/EazyHomeAccount/Views/Home/Contact.cshtml
+++ b/EazyHomeAccount/Views/Home/Contact.cshtml
@@ -1,9 +1,14 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
+<div style="align-content:center; margin:5px;; padding-left:100px">
+    <img style="position:center; width:250px;" src="~/Images/block.png" />
+    <h3 style="font-size:28px; text-align:center; width:250px">AND</h3>
+    <h1 style="width:250px; text-align:center; padding-left:1em;"><strong>FlowerSoft</strong></h1>
+</div>
+<hr />
 
 <address>
-    <h1><strong>FlowerSoft.<br /></strong></h1>
     114/84, Moo13 The Color Leisure, Bangna KM.8, Bangna-Trad Rd., Bangpleeyai, Bangplee, Samutprakarn 10540<br />
     <abbr title="Phone">P:</abbr>
     (+66) 85-126-1221, (+66) 87-790-3688
