--- a/EazyHomeAccount/Views/Shared/_Layout.cshtml
+++ b/EazyHomeAccount/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li id="menu-login"><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li id="menu-signup"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li id="menu-login"><a href="/Home/SignUp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li id="menu-signup"><a href="/Home/Login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </div>
