--- a/EazyHomeAccount/Views/Home/Index.cshtml
+++ b/EazyHomeAccount/Views/Home/Index.cshtml
@@ -4,28 +4,39 @@
 
 <div class="jumbotron">
     <h1>Eazy Home Account</h1>
-    <p class="lead">Record your daily transations to view and controll your spended. Summarize your INCOME and EXPEND.</p>
+    <p class="lead">Record your daily transations to view and control your spended. Summarize your INCOME and EXPEND.</p>
     <p class="lead"></p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Try for Free. &raquo;</a></p>
+    <p><a href="/Home/Login?Length=4" class="btn btn-primary btn-lg">Try for Free. &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Features</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            At <em>Eazy Home Account</em> you can do these 
+            <ul>
+                <li>Record any transaction</li>
+                <li>Add your wallet</li>
+                <li>Define you transaction name</li>
+                <li>Transfer wallet-to-wallet</li>
+                <li>Group user to manage you home budgeted</li>
+                <li>Summarize and View to see where is your money fly out!</li>
+            </ul>
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("Check it out!", "Login", "Home", new { @class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
         <h2>Why Eazy</h2>
         <p>
-            NuGet is a free Visual Studio extension that makes it easy to add,
-            remove, and update libraries and tools in Visual Studio projects.
+            In every day we pay to get a goods, which is probrobly foods, gadget, facility or even saving money.
+            And every transation you may think is difficult to manage whole of them 
+            By an <em>Eazy Home Account</em> is just do it simple as 3 step.<br />
+            <strong>From:</strong>some wallet <br />
+            <strong>To:</strong>some wallet <br />
+            <strong>How much:</strong>Value out.
+            
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("See how.", "About", "Home", new { @class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
         <h2>Who We Are?</h2>
@@ -34,6 +45,6 @@
             And we want to improve our skill on web development. So we looking around our home to make things better.
             <em><br />Who we are?</em>
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Check it out!>> &raquo;</a></p>
+        <p>@Html.ActionLink("Know more.", "Contact", "Home", new { @class = "btn btn-default" })</p>
     </div>
 </div>
